--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="heroSectionBox1 dflex-col ">
                             <!-- 6.subColumn1 -->
                             <h1>Coffee Heaven</h1>
-                            <p>Lorem ipsum dolor  amet consectetur adipisicing elit. Cumque, velit?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, velit?</p>
                             <button> About Us</button>
 
                         </div>
