--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                         <!-- 5.column5 -->
                         <div class="contactIconBox5 dflex">
                             <!-- 6.subColumn5 -->
-                            <p>© Copyright @ 2022 by <span>Mr. Web Designer </span>| All Rights Reserved</p>
+                            <p>© Copyright @ 2022 By <span>Mr. Web Designer </span>| All Rights Reserved</p>
                         </div>
                     </div>
                 </div>
